tf-aws-ecs-fargate-loadbalancer/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "VPC"
  }
}

resource "aws_subnet" "subnet1" {
    vpc_id = aws_vpc.vpc.id
    cidr_block = "10.0.1.0/24"
    map_public_ip_on_launch = true
    availability_zone = "ap-southeast-1a"  
    tags = {
      Name = "Subnet1"
    }
}

resource "aws_subnet" "subnet2"{
    vpc_id = aws_vpc.vpc.id
    cidr_block = "10.0.2.0/24"
    map_public_ip_on_launch = true
    availability_zone = "ap-souteast-1b"
    tags = {
        Name = "Subnet2"
    }
}

resource "aws_internet_gateway" "IGW" {
    vpc_id = aws_vpc.vpc.id
    tags = {
      Name = "Internet-Gateway"
    }
}

resource "aws_route_table" "RT" {
    vpc_id = aws_vpc.vpc.id
    route{
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.IGW.id
    }  
}

resource "aws_route_table_association" "RTA1" {
    subnet_id = aws_subnet.subnet1.id
    route_table_id = aws_route_table.RT.id
}

resource "aws_route_table_association" "RTA2" {
    subnet_id = aws_subnet.subnet2.id
    route_table_id = aws_route_table.RT.id
  
}
